tests/paczka1/fuzzy1/38752021.err
Error in line 3: RlM A926 80,3
Error in line 6: RlM S387 47,9
Error in line 26: S339 A627 7,3
Error in line 27: QopFo4I0go A926 59,3
